Unify social icons

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             <a href="https://dnd.hawk.bar/">Kor Virtual Tabletop System</a>
         </nav>
         <aside>
-            <a href="https://github.com/Hawkbat"><i class="fab fa-fw fa-github-square"></i></a>
-            <a href="https://twitter.com/HawkbarGaming"><i class="fab fa-fw fa-twitter-square"></i></a>
+            <a href="https://github.com/Hawkbat"><i class="fab fa-fw fa-github"></i></a>
+            <a href="https://twitter.com/HawkbarGaming"><i class="fab fa-fw fa-twitter"></i></a>
             <a href="https://www.twitch.tv/hawkbar"><i class="fab fa-fw fa-twitch"></i></a>
-            <a href="https://steamcommunity.com/id/Hawkbar/"><i class="fab fa-fw fa-steam-square"></i></a>
+            <a href="https://steamcommunity.com/id/Hawkbar/"><i class="fab fa-fw fa-steam"></i></a>
         </aside>
     </main>
 </body>
