--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <aside>
             <a href="https://github.com/Hawkbat"><i class="fab fa-fw fa-github"></i></a>
             <a href="https://twitter.com/HawkbarGaming"><i class="fab fa-fw fa-twitter"></i></a>
+            <a href="https://www.reddit.com/user/hawkbarGaming/"><i class="fab fa-fw fa-reddit"></i></a>
             <a href="https://www.twitch.tv/hawkbar"><i class="fab fa-fw fa-twitch"></i></a>
             <a href="https://steamcommunity.com/id/Hawkbar/"><i class="fab fa-fw fa-steam"></i></a>
         </aside>
