Add cheers bot link

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         nav {
             display: flex;
             flex-direction: column;
+            text-align: center;
             font-size: 24px;
         }
 
@@ -74,6 +75,7 @@
             <p>I play games and I code things.</p>
         </article>
         <nav>
+            <a href="https://cheers.hawk.bar/">Cheers Bot Twitch App</a>
             <a href="https://dnd.hawk.bar/">Kor Virtual Tabletop System</a>
         </nav>
         <aside>
