--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
             font-size: 24px;
         }
 
+        body::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-image: url(Logo.png);
+            background-repeat: no-repeat;
+            background-position: top center;
+            background-size: 320px;
+            opacity: 0.05;
+        }
+
         h1 {
             margin-bottom: 0;
         }
