--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             font-size: 24px;
         }
 
-        body::after {
+        body::before {
             content: "";
             position: absolute;
             width: 100%;
@@ -35,6 +35,7 @@
             background-position: top center;
             background-size: 320px;
             opacity: 0.05;
+            pointer-events: none;
         }
 
         h1 {
